# decision-tree

./: .gitignore  README.md  pyproject.toml
fair-oct/: .gitignore  README.md  pyproject.toml
fair-oct/analysis/modules/: const.R  lib.R
fair-oct/mlruns/0/: meta.yaml
fair-oct/src/: main.py
fair-oct/src/apps/model/: fair_oct.py
fair-oct/src/modules/: prep.py
fair-oct/src/utils/: const.py  io_operation.py  params.py
fair-oct/test/model/fair-oct/: conftest.py  test_fair_oct.py  test_prep.py
